@@ -8,6 +8,8 @@ Changes - Apache::Test change logfile
 
 =item 1.10-dev
 
+Quote and escape the executables in the shell calls [Ken Coar, Stas]
+
 Quote and escape filtered args received during 'perl Makefile.PL'
 [Geoffrey Young, Ken Coar]
 
